Fixed simon game spacing by adding container divs and applying flexbox inside of grid

--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,8 @@ body {
     "aside main main main";
     grid-template-rows: 1fr 1fr 1fr;
     grid-template-columns: 1fr 1fr 1fr 1fr;
+    width: 80vw;
+    justify-content: center;
     
 }
 header {
@@ -23,49 +25,78 @@ main {
     grid-column: 2 / span 2;
     display: grid;
     grid-template-areas:
-    "green red"
-    "yellow blue";
+    "greenContainer redContainer"
+    "yellowContainer blueContainer";
     grid-template-rows: 1fr 1fr;
     grid-template-columns: 1fr 1fr;
-    justify-items: center;
-    align-items: center;
+    /* justify-items: center;
+    align-items: center; */
 }
 aside {
     grid-column: 1;
     grid-row: 2 / span 4;
     font-family: 'Open Sans', sans-serif;
 }
+.redContainer {
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+    margin: 2px;
+}
+.greenContainer {
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-end;
+    margin: 2px;
+}
+.blueContainer {
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-start;
+    margin: 2px;
+}
+.yellowContainer {
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    margin: 2px;
+}
 .red {
     height: 100px;
     width: 100px;
     background: red;
-    margin: 5px;
+    /* margin: 5px; */
     z-index: 1;
-    border:3px solid black;
-    
+    border: 1px solid black;
+    display: flex;
+    justify-content: flex-end;
+
 
 }
 .green {
     height: 100px;
     width: 100px;
     background: green;
-    margin: 5px;
     z-index: 1;
     justify-content: start;
+    border: 1px solid black;
+
 }
 .blue {
     height: 100px;
     width: 100px;
     background: blue;
-    margin: 5px;
     z-index: 1;
+    border: 1px solid black;
+
 }
 .yellow {
     height: 100px;
     width: 100px;
     background: yellow;
-    margin: 5px;
     z-index: 1;
+    border: 1px solid black;
+
 }
 .hide {
     display: hidden;
